2002-04-21  Jody Goldberg <jody@gnome.org>

	* ms-escher.c (ms_escher_read_Blip) : remove some debug cruft.

2002-04-15  Jon K Hellan  <hellan@acm.org>

	* boot.c: s/main.h/libgnumeric.h/

	* ms-excel-write.c: Ditto.

2002-04-13  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (ms_excel_read_AUTOFILTER) : start work on filters.
	(ms_excel_read_sheet) : support the filter records.

2002-04-13  Jon K Hellan  <hellan@acm.org>

	* ms-chart.c: s/ENABLE_BONOBO/WITH_BONOBO/

	* ms-excel-read.c: Ditto

2002-03-27  Jody Goldberg <jody@gnome.org>

	* ms-biff.c (ms_biff_query_set_decrypt) : protect against NULL
	  passwords.

2002-03-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.2

2002-03-26  Jody Goldberg <jody@gnome.org>

	* ms-biff.c (wvMD5StoreDigest) : new from libwv-7.1
	(makekey) : ditto.
	(verify_password) : tweaked from libwv.
	(skip_bytes) : new.
	(ms_biff_query_set_decrypt) : new.
	(ms_biff_query_new) : support encryption.
	(ms_biff_query_next) : ditto.
	(ms_biff_query_destroy) : ditto.

	* ms-excel-read.c (ms_biff_bof_data_new) : Use the un-decoded data.
	(ms_excel_read_sheet) : comment that it seems like bytes 12 & 16 are
	  not encrypted.
	(biff_boundsheet_data_new) : stream start pos seems un encrypted.

2002-03-22  Jon K Hellan  <hellan@acm.org>

	* ms-excel-read.c (ms_excel_get_style_from_xf): Be prepared for
	color 65 as pattern color.

2002-03-20  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (ms_excel_read_sheet) : 15 is the
	  default fmt for cells.  0 is the default style fmt that is its
	  parent.
	(ms_excel_set_xf) : not strictly correct.  We should apply if the col,
	  row is different.
	(ms_excel_set_xf_segment) : no need to apply if it is the default.

2002-03-18  Morten Welinder  <terra@diku.dk>

	* ms-excel-read.h (_ExcelWorkbook): Add sharer.

	* ms-excel-read.c (ms_excel_workbook_new): Initialize sharer.
	(ms_excel_workbook_destroy): Destroy sharer.

	* ms-formula-read.c (ms_excel_parse_formula): Share resulting
	formulae.
